// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApprovalCard Component Tests rendering ApprovalCard: Renders an Approval Item with a decreased change in quantity 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffffff",
      "flex": 1,
      "flexDirection": "column",
      "marginBottom": 4,
      "paddingLeft": 14,
      "paddingRight": 8,
      "paddingVertical": 8,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#8492a8",
        "fontSize": 14,
        "fontWeight": "bold",
      }
    }
  >
    [missing "en.ITEM.ITEM" translation] 456
  </Text>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "width": "100%",
      }
    }
  >
    <Text
      style={
        Object {
          "alignSelf": "center",
          "color": "#424242",
          "fontSize": 18,
          "fontWeight": "bold",
          "width": "80%",
        }
      }
    >
      Test Item 456
    </Text>
    <withTheme(Checkbox)
      color="#0071e9"
      onPress={[Function]}
      status="unchecked"
      uncheckedColor="#0071e9"
    />
  </View>
  <View
    style={
      Object {
        "borderBottomColor": "#bdbdbd",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 6,
        "paddingBottom": 6,
        "width": "100%",
      }
    }
  >
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Object {
          "color": "#8492a8",
          "flexBasis": "auto",
          "flexGrow": 0,
          "flexShrink": 1,
          "fontSize": 14,
        }
      }
    >
      Associate Worker
    </Text>
    <Text
      style={
        Object {
          "color": "#8492a8",
          "fontSize": 14,
          "marginHorizontal": 4,
        }
      }
    >
      |
    </Text>
    <Text
      style={
        Object {
          "color": "#B40C00",
          "flexBasis": "60%",
          "flexGrow": 1,
          "flexShrink": 0,
          "fontSize": 14,
          "fontWeight": "bold",
        }
      }
    >
      [missing "en.APPROVAL.DAYS_LEFT" translation]
    </Text>
  </View>
  <QuantityChange
    dollarChange={100}
    newQty={10}
    oldQty={30}
  />
</View>
`;

exports[`ApprovalCard Component Tests rendering ApprovalCard: Renders an Approval Item with a positive price change 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffffff",
      "flex": 1,
      "flexDirection": "column",
      "marginBottom": 4,
      "paddingLeft": 14,
      "paddingRight": 8,
      "paddingVertical": 8,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#8492a8",
        "fontSize": 14,
        "fontWeight": "bold",
      }
    }
  >
    [missing "en.ITEM.ITEM" translation] 123
  </Text>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "width": "100%",
      }
    }
  >
    <Text
      style={
        Object {
          "alignSelf": "center",
          "color": "#424242",
          "fontSize": 18,
          "fontWeight": "bold",
          "width": "80%",
        }
      }
    >
      Test Item 123
    </Text>
    <withTheme(Checkbox)
      color="#0071e9"
      onPress={[Function]}
      status="unchecked"
      uncheckedColor="#0071e9"
    />
  </View>
  <View
    style={
      Object {
        "borderBottomColor": "#bdbdbd",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 6,
        "paddingBottom": 6,
        "width": "100%",
      }
    }
  >
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Object {
          "color": "#8492a8",
          "flexBasis": "auto",
          "flexGrow": 0,
          "flexShrink": 1,
          "fontSize": 14,
        }
      }
    >
      Associate Employee
    </Text>
    <Text
      style={
        Object {
          "color": "#8492a8",
          "fontSize": 14,
          "marginHorizontal": 4,
        }
      }
    >
      |
    </Text>
    <Text
      style={
        Object {
          "color": "#B40C00",
          "flexBasis": "60%",
          "flexGrow": 1,
          "flexShrink": 0,
          "fontSize": 14,
          "fontWeight": "bold",
        }
      }
    >
      [missing "en.APPROVAL.DAYS_LEFT" translation]
    </Text>
  </View>
  <QuantityChange
    dollarChange={200}
    newQty={20}
    oldQty={5}
  />
</View>
`;

exports[`ApprovalCard Component Tests rendering ApprovalCard: Renders the Approval Item CheckBox as "checked"  1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffffff",
      "flex": 1,
      "flexDirection": "column",
      "marginBottom": 4,
      "paddingLeft": 14,
      "paddingRight": 8,
      "paddingVertical": 8,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#8492a8",
        "fontSize": 14,
        "fontWeight": "bold",
      }
    }
  >
    [missing "en.ITEM.ITEM" translation] 0
  </Text>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "width": "100%",
      }
    }
  >
    <Text
      style={
        Object {
          "alignSelf": "center",
          "color": "#424242",
          "fontSize": 18,
          "fontWeight": "bold",
          "width": "80%",
        }
      }
    >
      
    </Text>
    <withTheme(Checkbox)
      color="#0071e9"
      onPress={[Function]}
      status="checked"
      uncheckedColor="#0071e9"
    />
  </View>
  <View
    style={
      Object {
        "borderBottomColor": "#bdbdbd",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 6,
        "paddingBottom": 6,
        "width": "100%",
      }
    }
  >
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Object {
          "color": "#8492a8",
          "flexBasis": "auto",
          "flexGrow": 0,
          "flexShrink": 1,
          "fontSize": 14,
        }
      }
    >
      
    </Text>
    <Text
      style={
        Object {
          "color": "#8492a8",
          "fontSize": 14,
          "marginHorizontal": 4,
        }
      }
    >
      |
    </Text>
    <Text
      style={
        Object {
          "color": "#B40C00",
          "flexBasis": "60%",
          "flexGrow": 1,
          "flexShrink": 0,
          "fontSize": 14,
          "fontWeight": "bold",
        }
      }
    >
      [missing "en.APPROVAL.DAYS_LEFT" translation]
    </Text>
  </View>
  <QuantityChange
    dollarChange={0}
    newQty={0}
    oldQty={0}
  />
</View>
`;

exports[`ApprovalCard Component Tests rendering ApprovalCard: Renders the Approval Item CheckBox as "unchecked"  1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffffff",
      "flex": 1,
      "flexDirection": "column",
      "marginBottom": 4,
      "paddingLeft": 14,
      "paddingRight": 8,
      "paddingVertical": 8,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#8492a8",
        "fontSize": 14,
        "fontWeight": "bold",
      }
    }
  >
    [missing "en.ITEM.ITEM" translation] 0
  </Text>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "width": "100%",
      }
    }
  >
    <Text
      style={
        Object {
          "alignSelf": "center",
          "color": "#424242",
          "fontSize": 18,
          "fontWeight": "bold",
          "width": "80%",
        }
      }
    >
      
    </Text>
    <withTheme(Checkbox)
      color="#0071e9"
      onPress={[Function]}
      status="unchecked"
      uncheckedColor="#0071e9"
    />
  </View>
  <View
    style={
      Object {
        "borderBottomColor": "#bdbdbd",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 6,
        "paddingBottom": 6,
        "width": "100%",
      }
    }
  >
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Object {
          "color": "#8492a8",
          "flexBasis": "auto",
          "flexGrow": 0,
          "flexShrink": 1,
          "fontSize": 14,
        }
      }
    >
      
    </Text>
    <Text
      style={
        Object {
          "color": "#8492a8",
          "fontSize": 14,
          "marginHorizontal": 4,
        }
      }
    >
      |
    </Text>
    <Text
      style={
        Object {
          "color": "#B40C00",
          "flexBasis": "60%",
          "flexGrow": 1,
          "flexShrink": 0,
          "fontSize": 14,
          "fontWeight": "bold",
        }
      }
    >
      [missing "en.APPROVAL.DAYS_LEFT" translation]
    </Text>
  </View>
  <QuantityChange
    dollarChange={0}
    newQty={0}
    oldQty={0}
  />
</View>
`;

exports[`ApprovalCard Component Tests rendering ApprovalCard: Renders zero if days left is undefined  1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffffff",
      "flex": 1,
      "flexDirection": "column",
      "marginBottom": 4,
      "paddingLeft": 14,
      "paddingRight": 8,
      "paddingVertical": 8,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#8492a8",
        "fontSize": 14,
        "fontWeight": "bold",
      }
    }
  >
    [missing "en.ITEM.ITEM" translation] 0
  </Text>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "width": "100%",
      }
    }
  >
    <Text
      style={
        Object {
          "alignSelf": "center",
          "color": "#424242",
          "fontSize": 18,
          "fontWeight": "bold",
          "width": "80%",
        }
      }
    >
      
    </Text>
    <withTheme(Checkbox)
      color="#0071e9"
      onPress={[Function]}
      status="unchecked"
      uncheckedColor="#0071e9"
    />
  </View>
  <View
    style={
      Object {
        "borderBottomColor": "#bdbdbd",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 6,
        "paddingBottom": 6,
        "width": "100%",
      }
    }
  >
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Object {
          "color": "#8492a8",
          "flexBasis": "auto",
          "flexGrow": 0,
          "flexShrink": 1,
          "fontSize": 14,
        }
      }
    >
      
    </Text>
    <Text
      style={
        Object {
          "color": "#8492a8",
          "fontSize": 14,
          "marginHorizontal": 4,
        }
      }
    >
      |
    </Text>
    <Text
      style={
        Object {
          "color": "#B40C00",
          "flexBasis": "60%",
          "flexGrow": 1,
          "flexShrink": 0,
          "fontSize": 14,
          "fontWeight": "bold",
        }
      }
    >
      [missing "en.APPROVAL.DAYS_LEFT" translation]
    </Text>
  </View>
  <QuantityChange
    dollarChange={0}
    newQty={0}
    oldQty={0}
  />
</View>
`;
